fix(style) - Accordion spacing

--- a/packages/styles/scss/components/_accordion.scss
+++ b/packages/styles/scss/components/_accordion.scss
@@ -86,7 +86,7 @@
     overflow: hidden;
 
     .ilo--accordion--innerpanel {
-      padding-bottom: spacing(3);
+      padding-bottom: spacing(9);
       padding-top: spacing(2);
     }
 
